# server/routes/userRoutes.js
@@ -4,5 +4,6 @@ const authController = require('./../controllers/authController');
 const router = express.Router();
 
 router.post('/users', authController.signup);
+router.post('/sessions', authController.login);
 
 module.exports = router;
