# server/swagger.yaml
@@ -6,7 +6,7 @@ paths:
   /users:
     post:
       requestBody:
-        description: user email and password
+        description: User email and password
         content:
           application/json:
             schema:
@@ -29,11 +29,14 @@ paths:
                 user created:
                   value:
                     message: User Created
+                    token: >-
+                      eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYzODdkZTU4YjhjYTk5NGRjZDhmOWRhMiIsImlhdCI6MTY2OTg0ODY2NCwiZXhwIjoxNjcwMzY3MDY0fQ.b7JLmrEx9sxC3eMjjVkk9nSsM8yHY6gHfLBlgsnzu08
                     data:
                       user:
                         email: bob@gmail.com
-                        password: mikk12345
-                        _id: 638797603615634aa1991ef1
+                        password: >-
+                          $2a$12$MkyngiJJdDRz8u4vTCTH6eomToPGljGDxQQQOB.P4PMUz/OjzF9Mm
+                        _id: 6387de58b8ca994dcd8f9da2
                         __v: 0
           description: user created
         '403':
@@ -66,6 +69,59 @@ paths:
                   value:
                     error: error
           description: Internal error
+  /sessions:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/users'
+            examples:
+              Login input:
+                value:
+                  email: bob@gmail.com
+                  password: mikk12345
+        required: true
+      tags:
+        - Users
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/users'
+              examples:
+                Logged in user:
+                  value:
+                    status: success
+                    token: >-
+                      eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjYzODdiYTVkNTBkMThkNGY2ZjdiZTM2ZiIsImlhdCI6MTY2OTg0ODYwNSwiZXhwIjoxNjcwMzY3MDA1fQ.OjzH2d16LfwmcdN_Cd-SdBlVI4DpQezEkJk9RiNE5K0
+                    data:
+                      user:
+                        _id: 6387ba5d50d18d4f6f7be36f
+                        email: bob@gmail.com
+                        __v: 0
+          description: User logged in
+        '400':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/users'
+              examples:
+                Invalid user credentials:
+                  value:
+                    error: Please provide email and password!
+          description: Input fields empty
+        '401':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/users'
+              examples:
+                Wrong email or password:
+                  value:
+                    error: Incorrect email or password
+          description: Unauthorized
   /poems:
     get:
       responses:
@@ -97,8 +153,6 @@ paths:
                     status: fail
                     error: poems not found
           description: Poems not found
-      tags:
-        - Poems
 components:
   schemas:
     poem:
